[project]
name = "gabut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.9",
    "google-genai>=1.16.1",
    "ipykernel>=6.29.5",
    "llama-index>=0.12.37",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-google-genai>=0.1.13",
    "llama-index-llms-huggingface-api>=0.4.3",
    "llama-index-tools-google>=0.3.0",
    "llama-index-tools-mcp>=0.1.3",
    "llama-index-vector-stores-chroma>=0.4.1",
    "smolagents>=1.16.1",
]
